tests/ui/cast/casts-issue-46365.stderr
error[E0412]: cannot find type `Ipsum` in this scope
  --> $DIR/casts-issue-46365.rs:2:12
   |
LL |     ipsum: Ipsum
   |            ^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0412`.
